--- a/whiteus/pubspec.yaml
+++ b/whiteus/pubspec.yaml
@@ -30,6 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.6
+  youtube_player_flutter: ^8.1.2
+  retrofit: ^4.0.1
+  json_annotation: ^4.8.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +44,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator: ^6.0.0+3
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.2
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
