--- a/whiteus/pubspec.yaml
+++ b/whiteus/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   retrofit: ^4.0.1
   json_annotation: ^4.8.1
   flutter_swiper_null_safety: ^1.0.2
+  shared_preferences: ^2.1.1
 
 
 
