--- a/whiteus/pubspec.yaml
+++ b/whiteus/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   json_annotation: ^4.8.1
   flutter_swiper_null_safety: ^1.0.2
   shared_preferences: ^2.1.1
+  firebase_core: ^2.12.0
+  cloud_firestore: ^4.7.0
 
 
 
