디자인1차 변경(20:15)

--- a/whiteus/android/app/build.gradle
+++ b/whiteus/android/app/build.gradle
@@ -51,6 +51,10 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+    // 오류 떠서 추가함
+    lintOptions {
+        warning 'unchecked'
+    }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
