--- a/whiteus/pubspec.yaml
+++ b/whiteus/pubspec.yaml
@@ -82,7 +82,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/HomeScreen/image/
+    - assets/images/
+   #- lib/HomeScreen/image/
     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
